--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Ricardo F. dos Santos</h1>
-      <p>I'm a <span class="typed" data-typed-items="Data Scientist, Molecular Biologist, Bioinformatician, A.I. Developer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Data Scientist, Molecular Biologist, Entrepreneur, Bioinformatician, A.I. Developer"></span></p>
       <div class="social-links">
         <a href="https://twitter.com/rickofthesaints?lang=hu" class="twitter"><i class="bx bxl-twitter"></i></a>
         <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
