--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Ricardo F. dos Santos</h1>
+      <h1>Ricardo F. dos Santos, PhD</h1>
       <p>I'm a <span class="typed" data-typed-items="Data Scientist, Molecular Biologist, Entrepreneur, Bioinformatician, A.I. Developer"></span></p>
       <div class="social-links">
         <a href="https://twitter.com/rickofthesaints?lang=hu" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -90,16 +90,16 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Postdoctoral Researcher at <a href="https://nms.unl.pt">NOVA Medical School</a>
+              <br>Co-Founder &amp; CEO of <a href="https://neomic.eu">Neomic</a></h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              10-years R&D experience in Life Sciences. 6-years experience in Bioinformatics. 2-year experience in Machine-learning 
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>11 May 1989</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://www.linkedin.com/in/rfdossantos/">linkedin.com/in/rfdossantos</a>></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
                 </ul>
