--- a/index.html
+++ b/index.html
@@ -93,15 +93,17 @@
             <h3>Postdoctoral Researcher at <a href="https://nms.unl.pt">NOVA Medical School</a>
               <br>Co-Founder &amp; CEO of <a href="https://neomic.eu">Neomic</a></h3>
             <p class="fst-italic">
-              10-years R&D experience in Life Sciences. 6-years experience in Bioinformatics. 2-year experience in Machine-learning 
+              10-years R&D experience in Life Sciences
+              <br>6-years experience in Bioinformatics
+              <br>2-year experience in Machine-learning 
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>11 May 1989</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://www.linkedin.com/in/rfdossantos/">linkedin.com/in/rfdossantos</a>></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://rf-santos.github.io/resume/">rf-santos.github.io/resume</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+351 93 303 54 78</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lisbon, PT</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
