--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
               <br>Co-Founder &amp; CEO of <a href="https://neomic.eu">Neomic</a></h3>
             <p class="fst-italic">
               10-years R&D experience in Life Sciences
-              <br>6-years experience in Bioinformatics
-              <br>2-year experience in Machine-learning 
+              <br>6-years professional experience in Bioinformatics
+              <br>2-year programming experience in Machine-learning 
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -103,15 +103,15 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>11 May 1989</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://rf-santos.github.io/resume/">rf-santos.github.io/resume</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+351 93 303 54 78</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lisbon, PT</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lisbon, PT</span></li> -->
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>32</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Doctor</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>ricardofilipecdsantos@gmail.com</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
                 </ul>
               </div>
             </div>
