--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <p class="fst-italic">
               10-years R&D experience in Life Sciences
               <br>6-years professional experience in Bioinformatics
-              <br>2-year programming experience in Machine-learning 
+              <br>2-years programming experience in Machine-learning 
             </p>
             <div class="row">
               <div class="col-lg-6">
