--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Ricardo F. dos Santos, PhD</h1>
-      <p>I'm a <span class="typed" data-typed-items="Data Scientist, Molecular Biologist, Entrepreneur, Bioinformatician, A.I. Developer"></span></p>
+      <p>I am: <span class="typed" data-typed-items="Data Scientist, Molecular Biologist, Entrepreneur, Bioinformatician, A.I. Developer"></span></p>
       <div class="social-links">
         <a href="https://twitter.com/rickofthesaints?lang=hu" class="twitter"><i class="bx bxl-twitter"></i></a>
         <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
@@ -110,7 +110,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>32</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Doctor</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>ricardofilipecdsantos@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>:</strong> <span>ricardofilipecdsantos@gmail.com</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
                 </ul>
               </div>
