--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Ricardo F. dos Santos, PhD</h1>
-      <p>I am: <span class="typed" data-typed-items="Data Scientist, A.I. Developer, Entrepreneur, Bioinformatician, Molecular Biologist "></span></p>
+      <p><span class="typed" data-typed-items="Data Scientist, A.I. Developer, Entrepreneur, Bioinformatician, Molecular Biologist "></span></p>
       <div class="social-links">
         <a href="https://twitter.com/rickofthesaints?lang=hu" class="twitter"><i class="bx bxl-twitter"></i></a>
         <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
@@ -81,7 +81,7 @@
           <h2>About</h2>
           <p>
             Molecular Biologist formal background with professional experience as Data Scientist & Programmer.
-            <br>Expert in Next Generation Sequencing approaches, biological data analysis & bioinformatics.
+            <br>Expert in data analysis, bioinformatics & next generation sequencing.
           </p>
         </div>
 
@@ -101,8 +101,8 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>11 May 1989</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://rf-santos.github.io/resume/">rf-santos.github.io/resume</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+351 93 303 54 78</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ricardofilipecdsantos@gmail.com</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lisbon, PT</span></li> -->
                 </ul>
               </div>
@@ -110,7 +110,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>32</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Doctor</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ricardofilipecdsantos@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://rf-santos.github.io/resume/">rf-santos.github.io/resume</a></span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
                 </ul>
               </div>
@@ -187,23 +187,30 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">Bash <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
+              <span class="skill">R <i class="val">85%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Python <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">Rust <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -212,23 +219,30 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+              <span class="skill">Scikit-learn <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Tnesorflow <i class="val">60%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            
+            <div class="progress">
+              <span class="skill">Pandas/Numpy <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+              <span class="skill">SQL <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
