--- a/index.html
+++ b/index.html
@@ -115,10 +115,6 @@
                 </ul>
               </div>
             </div>
-            <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
           </div>
         </div>
 
@@ -131,40 +127,50 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I have attracted over <b>€240k in R&D funding</b> as a Co-Principal Investigator. I have Co-supervised 2 PhD students, 2 MSc students and multiple research fellows. I have also <b>Co-led small teams of 3-5 people</b> during 3 different R&D projects.</p>
         </div>
 
         <div class="row">
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Happy Clients</p>
+              <i class="bi bi-journal-text"></i>
+              <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
+              <p><b>10</b> publications
+                <br><b>5</b> as 1st-author
+                <br><b>7</b> h-index
+                <br><b>7.4</b> personal impact factor
+              </p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
-              <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Projects</p>
+              <i class="bi bi-currency-euro"></i>
+              <span data-purecounter-start="0" data-purecounter-end="240000" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Over <b>€240,000</b> in R&D funding
+              </p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
-              <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hours Of Support</p>
+              <i class="bi bi-people-fill"></i>
+              <span data-purecounter-start="0" data-purecounter-end="19" data-purecounter-duration="1" class="purecounter"></span>
+              <p><b>19</b> communications
+                <br><b>7</b> in international conferences
+              </p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-award"></i>
-              <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Awards</p>
+              <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Highlighted research in <b>EMBO Journal</b>
+                <br><b>Selected talk</b> at 44th FEBS congress in Krakow, PL
+                <br><b>Best oral presentation</b> at 9th ITQB NOVA PhD Students' Meeting
+              </p>
             </div>
           </div>
 
@@ -179,7 +185,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I have a working knowledge on various <b>data science frameworks and approaches</b>. I have been performing exploratory data analysis, data cleaning, data mining & statistical analysis for <b>8+ years</b>. I have also build <b>Machine-learning models</b> and for biomedical applications.</p>
         </div>
 
         <div class="row skills-content">
