--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>I have a working knowledge on various <b>data science frameworks and approaches</b>. I have been performing exploratory data analysis, data cleaning, data mining & statistical analysis for <b>8+ years</b>. I have also build <b>Machine-learning models</b> and for biomedical applications.</p>
+          <p>I have a working knowledge on various <b>data science frameworks and approaches</b>. I have been performing exploratory data analysis, data cleaning, data mining & statistical analysis for <b>8+ years</b>. I have also build <b>Machine-learning models</b> for biomedical applications.</p>
         </div>
 
         <div class="row skills-content">
