--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+        <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li> -->
         <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
@@ -126,7 +126,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Facts</h2>
+          <h2>Overview</h2>
           <p>I have attracted over <b>€240k in R&D funding</b> as a Co-Principal Investigator. 
             <br>I have Co-supervised 2 PhD students, 2 MSc students and multiple research fellows.
             <br>I have also <b>Co-led small teams of 3-5 people</b> during 3 different R&D projects.
@@ -139,7 +139,7 @@
             <div class="count-box">
               <i class="bi bi-journal-text"></i>
               <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
-              <p><b>10</b> publications
+              <p><h3><b>Publications</b></h3>
                 <br><b>5</b> as 1st-author
                 <br><b>7</b> h-index
                 <br><b>7.4</b> personal impact factor
@@ -151,7 +151,8 @@
             <div class="count-box">
               <i class="bi bi-currency-euro"></i>
               <span data-purecounter-start="0" data-purecounter-end="240000" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Over <b>€240,000</b> in R&D funding
+              <p><h3><b>Funding</b></h3>
+                <br>Over <b>€240,000</b> in R&D funding
               </p>
             </div>
           </div>
@@ -160,7 +161,7 @@
             <div class="count-box">
               <i class="bi bi-people-fill"></i>
               <span data-purecounter-start="0" data-purecounter-end="19" data-purecounter-duration="1" class="purecounter"></span>
-              <p><b>19</b> communications
+              <p><h3><b>Communications</b></h3>
                 <br><b>7</b> in international conferences
               </p>
             </div>
@@ -170,9 +171,10 @@
             <div class="count-box">
               <i class="bi bi-award"></i>
               <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Highlighted research in <b>EMBO Journal</b>
+              <p><h3><b>Awards & Honors</b></h3>
+                <br>Highlighted research in <b>EMBO Journal</b>
                 <br><b>Selected talk</b> at 44th FEBS congress in Krakow, PL
-                <br><b>Best oral presentation</b> at 9th ITQB NOVA PhD Students' Meeting
+                <br><b>Best talk</b> at 9th ITQB NOVA PhD Students' Meeting
               </p>
             </div>
           </div>
@@ -289,42 +291,70 @@
 
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Postdoctoral researcher (ERC funded)</h4>
+              <h5>October 2020 - Present</h5>
+              <p><em>Chronic Disease Research Centre (NMS), Lisboa </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Co-Principal Investigator in a 2021 FCT funded project to investigate the molecular mechanisms involved in terminal neuronal differentiation.</li>
+                <li>Lead in project using Machine-learning & Bioinformatics to discover new long non-coding RNAs regulating <em>Drosophila melanogaster</em> Neural Stem Cells.</li>
+                <li>Lead in project set out to find functional non-coding RNAs involved in brain tumorigenesis.</li>
+                <li>Responsible for lab's IT infrastructure.</li>
+              </ul>
+            </div> <div class="resume-item">
+              <h4>Postdoctoral researcher (FCT funded)</h4>
+              <h5>April 2019 - October 2020</h5>
+              <p><em>Institute of Chemical and Biological Technologies (NOVA), Oeiras </em></p>
+              <ul>
+                <li>Lead in project focused on the molecular mechanisms of host-pathogen interactions of the human pathogen <em>Listeria monocytogenes</em>.</li>
+                <li>Responsible for lab's Website maintenance</em>.</li>
+                <li>Co-supervised a team of 5 researchers, including 2 PhD Students.</li>
+              </ul>
+            </div> <div class="resume-item">
+              <h4>Research fellow (Horizon 2020 funded)</h4>
+              <h5>January 2019 - April 2019</h5>
+              <p><em>Institute of Chemical and Biological Technologies (NOVA), Oeiras </em></p>
+              <ul>
+                <li>Integrated a systems biology project set out to reprogram and control <em>Pseudomonas putida</em> for biocatlysis.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>PhD Student (FCT funded)</h4>
+              <h5>January 2015 - December 2018</h5>
+              <p><em>Institute of Chemical and Biological Technologies (NOVA), Oeiras </em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Co-lead in project investigating functional RNAs and RNA-binding proteins involved in bacterial ribosome biogenesis.</li>
+                <li>Lead Bioinformatician and Data Analyist handling multiple NGS data.</li>
+                <li>Responsible for lab's IT infrastructure.</li>
               </ul>
             </div>
-          </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Advance Course in NGS Bioinformatics</h4>
+              <h5>2019</h5>
+              <p><em>Wellcome Genome Campus, Hinxton</em></p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Ph. Doctorate in Molecular Biosciences</h4>
+              <h5>2015 - 2018</h5>
+              <p><em>Institute of Chemical and Biological Technologies (NOVA), Oeiras</em></p>
             </div>
+            <div class="resume-item">
+              <h4>Master in Medical Microbiology</h4>
+              <h5>2012 - 2013</h5>
+              <p><em>NOVA School of Science & Technology (NOVA), Caparica</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Postgraduate in Forensic Sciences & Technologies</h4>
+              <h5>2011</h5>
+              <p><em>Lisbon School of Health & Technology, Moscavide</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Ph. Doctorate in Molecular Biosciences</h4>
+              <h5>2007 - 2011</h5>
+              <p><em>NOVA School of Science & Technology (NOVA), Caparica</em></p>
+            </div>
+            
           </div>
         </div>
 
@@ -332,7 +362,7 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <!-- <section id="portfolio" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -482,15 +512,15 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section> -->
+    <!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Skills</h2>
         </div>
 
         <div class="row">
