--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               <i class="bi bi-award"></i>
               <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
               <p><h3><b>Awards & Honors</b></h3>
-                <br>Highlighted research in <b>EMBO Journal</b>
+                <br><b>Highlighted research</b> in EMBO Journal
                 <br><b>Selected talk</b> at 44th FEBS congress in Krakow, PL
                 <br><b>Best talk</b> at 9th ITQB NOVA PhD Students' Meeting
               </p>
@@ -190,7 +190,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>I have a working knowledge on various <b>data science frameworks and approaches</b>. I have been performing exploratory data analysis, data cleaning, data mining & statistical analysis for <b>8+ years</b>. I have also build <b>Machine-learning models</b> for biomedical applications.</p>
+          <p>I have a working knowledge on various <b>data science frameworks and approaches</b>. I have been performing exploratory data analysis, data cleaning, data mining & statistical analysis for <b>8+ years</b>. I have also built <b>Machine-learning models</b> for biomedical applications.</p>
         </div>
 
         <div class="row skills-content">
@@ -327,6 +327,7 @@
                 <li>Responsible for lab's IT infrastructure.</li>
               </ul>
             </div>
+          </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
