--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
               <p><em>Lisbon School of Health & Technology, Moscavide</em></p>
             </div>
             <div class="resume-item">
-              <h4>Ph. Doctorate in Molecular Biosciences</h4>
+              <h4>BSc in Cellular & Molecular Biology</h4>
               <h5>2007 - 2011</h5>
               <p><em>NOVA School of Science & Technology (NOVA), Caparica</em></p>
             </div>
