--- a/index.html
+++ b/index.html
@@ -535,13 +535,11 @@
                 <i class="bx bx-brain"></i>
               </div>
               <h4><a href="">Data Science & A.I.</a></h4>
-              <p>Working experience in various Data Science and Machine-learning techniques
-                <ul>
-                  <li>Data mining and data cleaning of biodata</li>
-                  <li>M.L. model building, testing & feature engineering</li>
-                  <li>Statistical analysis and performance</li>
-                  <li>Building data dashboards & reports</li>
-                </ul>
+              <p><b>Working experience in various Data Science and Machine-learning techniques.</b>
+                <li align="left">Data mining and data cleaning of biodata</li>
+                <li align="left">M.L. model building, testing & feature engineering</li>
+                <li align="left">Statistical analysis and performance</li>
+                <li align="left">Building data dashboards & reports</li>
               </p>
             </div>
           </div>
@@ -555,13 +553,11 @@
                 <i class="bx bx-code-block"></i>
               </div>
               <h4><a href="">Programming & Bioinformatics</a></h4>
-              <p>Proficiency in Bioinformatics and high-level programming
-                <ul>
-                  <li>Multiple NGS datasets: RNA-seq, scRNA-seq, WGS, ...</li>
-                  <li>Build, test & deploy pipelines/programs</li>
-                  <li>Scripting in Bash, Python & R</li>
-                  <li>Docker & Git</li>
-                </ul>
+              <p><b>Proficiency in Bioinformatics and high-level programming.</b>
+                <li align="left">Multiple NGS datasets: RNA-seq, scRNA-seq, WGS, ...</li>
+                <li align="left">Build, test & deploy pipelines/programs</li>
+                <li align="left">Scripting in Bash, Python & R</li>
+                <li align="left">Docker & Git</li>
               </p>
             </div>
           </div>
@@ -575,14 +571,12 @@
                 <i class="bx bx-dna"></i>
               </div>
               <h4><a href="">Nucleic Acid Research</a></h4>
-              <p>Extensive expertise in RNA-based methods, interaction assays and genetic cloning
-                <ul>
-                  <li>RNA-RNA/DNA/Protein Interaction Assays</li>
-                  <li><em>In vivo, ex vivo, in vitro</em> & <em>in silico</em> RNA studies</li>
-                  <li>Radioactive RNA detection</li>
-                  <li>single-molecule Fluorescent In-Situ Hybridization</li>
-                  <li>Discovery of functional RNAs from NGS</li>
-                </ul>
+              <p><b>Extensive expertise in RNA-based methods, interaction assays and genetic cloning.</b>
+                <li align="left">RNA-RNA/DNA/Protein Interaction Assays</li>
+                <li align="left"><em>In vivo, ex vivo, in vitro</em> & <em>in silico</em> RNA studies</li>
+                <li align="left">Radioactive RNA detection</li>
+                <li align="left">single-molecule Fluorescent In-Situ Hybridization</li>
+                <li align="left">Discovery of functional RNAs from NGS</li>
               </p>
             </div>
           </div>
