--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                 </svg>
                 <i class="bx bx-code-block"></i>
               </div>
-              <h4><a href="">Programming & Bioinformatics</a></h4>
+              <h4><a href="">Programming</a></h4>
               <p><b>Proficiency in Bioinformatics and high-level programming.</b>
                 <li align="left">Multiple NGS datasets: RNA-seq, scRNA-seq, WGS, ...</li>
                 <li align="left">Build, test & deploy pipelines/programs</li>
