--- a/index.html
+++ b/index.html
@@ -536,10 +536,10 @@
               </div>
               <h4><a href="">Data Science & A.I.</a></h4>
               <p><b>Working experience in various Data Science and Machine-learning techniques.</b>
-                <li align="left">Data mining and data cleaning of biodata</li>
-                <li align="left">M.L. model building, testing & feature engineering</li>
-                <li align="left">Statistical analysis and performance</li>
-                <li align="left">Building data dashboards & reports</li>
+                <p align="left">> Data mining and data cleaning of biodata</p>
+                <p align="left">> M.L. model building, testing & feature engineering</p>
+                <p align="left">> Statistical analysis and performance</p>
+                <p align="left">> Building data dashboards & reports</p>
               </p>
             </div>
           </div>
@@ -554,10 +554,10 @@
               </div>
               <h4><a href="">Programming</a></h4>
               <p><b>Proficiency in Bioinformatics and high-level programming.</b>
-                <li align="left">Multiple NGS datasets: RNA-seq, scRNA-seq, WGS, ...</li>
-                <li align="left">Build, test & deploy pipelines/programs</li>
-                <li align="left">Scripting in Bash, Python & R</li>
-                <li align="left">Docker & Git</li>
+                <p align="left">> Multiple NGS datasets: RNA-seq, scRNA-seq, WGS, ...</p>
+                <p align="left">> Build, test & deploy pipelines/programs</p>
+                <p align="left">> Scripting in Bash, Python & R</p>
+                <p align="left">> Docker & Git</p>
               </p>
             </div>
           </div>
@@ -572,11 +572,11 @@
               </div>
               <h4><a href="">Nucleic Acid Research</a></h4>
               <p><b>Extensive expertise in RNA-based methods, interaction assays and genetic cloning.</b>
-                <li align="left">RNA-RNA/DNA/Protein Interaction Assays</li>
-                <li align="left"><em>In vivo, ex vivo, in vitro</em> & <em>in silico</em> RNA studies</li>
-                <li align="left">Radioactive RNA detection</li>
-                <li align="left">single-molecule Fluorescent In-Situ Hybridization</li>
-                <li align="left">Discovery of functional RNAs from NGS</li>
+                <p align="left">> RNA-RNA/DNA/Protein Interaction Assays</p>
+                <p align="left">> <em>In vivo, ex vivo, in vitro</em> & <em>in silico</em> RNA studies</p>
+                <p align="left">> Radioactive RNA detection</p>
+                <p align="left">> single-molecule Fluorescent In-Situ Hybridization</p>
+                <p align="left">> Discovery of functional RNAs from NGS</p>
               </p>
             </div>
           </div>
