--- a/index.html
+++ b/index.html
@@ -291,15 +291,24 @@
 
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Postdoctoral researcher (ERC funded)</h4>
+              <h4>Co-Founder & CEO (ERC funded)</h4>
               <h5>October 2020 - Present</h5>
-              <p><em>Chronic Disease Research Centre (NMS), Lisboa </em></p>
+              <p><em>Neomic (<a href="https://neomic.eu">neomic.eu</a>) </em></p>
               <ul>
-                <li>Co-Principal Investigator in a 2021 FCT funded project to investigate the molecular mechanisms involved in terminal neuronal differentiation.</li>
-                <li>Lead in project using Machine-learning & Bioinformatics to discover new long non-coding RNAs regulating <em>Drosophila melanogaster</em> Neural Stem Cells.</li>
-                <li>Lead in project set out to find functional non-coding RNAs involved in brain tumorigenesis.</li>
-                <li>Responsible for lab's IT infrastructure.</li>
+                <li>Driving force behind the creation of Neomic, a bioinformatics and software company.</li>
+                <li>Business development.</li>
+                <li>Selected for AINanoTEC accelerator program 2022 (2nd Ed.).</li>
               </ul>
+              <div class="resume-item">
+                <h4>Postdoctoral researcher (ERC funded)</h4>
+                <h5>October 2020 - Present</h5>
+                <p><em>Chronic Disease Research Centre (NMS), Lisboa </em></p>
+                <ul>
+                  <li>Co-Principal Investigator in a 2021 FCT funded project to investigate the molecular mechanisms involved in terminal neuronal differentiation.</li>
+                  <li>Lead in project using Machine-learning & Bioinformatics to discover new long non-coding RNAs regulating <em>Drosophila melanogaster</em> Neural Stem Cells.</li>
+                  <li>Lead in project set out to find functional non-coding RNAs involved in brain tumorigenesis.</li>
+                  <li>Responsible for lab's IT infrastructure.</li>
+                </ul>
             </div> <div class="resume-item">
               <h4>Postdoctoral researcher (FCT funded)</h4>
               <h5>April 2019 - October 2020</h5>
