--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Co-Founder & CEO (ERC funded)</h4>
+              <h4>Co-Founder & CEO</h4>
               <h5>October 2020 - Present</h5>
               <p><em>Neomic (<a href="https://neomic.eu">neomic.eu</a>) </em></p>
               <ul>
