--- a/index.html
+++ b/index.html
@@ -292,14 +292,14 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Co-Founder & CEO</h4>
-              <h5>October 2020 - Present</h5>
+              <h5>February 2022 - Present</h5>
               <p><em>Neomic (<a href="https://neomic.eu">neomic.eu</a>) </em></p>
               <ul>
                 <li>Driving force behind the creation of Neomic, a bioinformatics and software company.</li>
                 <li>Business development.</li>
                 <li>Selected for AINanoTEC accelerator program 2022 (2nd Ed.).</li>
               </ul>
-            <div class="resume-item">
+            </div> <div class="resume-item">
               <h4>Postdoctoral researcher (ERC funded)</h4>
               <h5>October 2020 - Present</h5>
               <p><em>Chronic Disease Research Centre (NMS), Lisboa </em></p>
