--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
             <img src="assets/img/profile-img.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Postdoctoral Researcher at <a href="https://nms.unl.pt">NOVA Medical School</a>
+            <h3>Advanced Data Scientist at <a href="https://capgemini-engineering.com/">Capgemini Engineering</a>
               <br>Co-Founder &amp; CEO of <a href="https://neomic.eu">Neomic</a></h3>
             <p class="fst-italic">
               10-years R&D experience in Life Sciences
               <br>6-years professional experience in Bioinformatics
-              <br>2-years programming experience in Machine-learning 
+              <br>2-years experience in Machine-learning & Data Engineering
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -190,7 +190,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>I have a working knowledge on various <b>data science frameworks and approaches</b>. I have been performing exploratory data analysis, data cleaning, data mining & statistical analysis for <b>8+ years</b>. I have also built <b>Machine-learning models</b> for biomedical applications.</p>
+          <p>I have a working knowledge on various <b>data science frameworks</b>. I have been performing exploratory data analysis, data cleaning, data mining & statistical analysis for <b>8+ years</b>. I have built <b>Machine-learning models</b> for biomedical applications.</p>
         </div>
 
         <div class="row skills-content">
@@ -198,9 +198,9 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Bash <i class="val">100%</i></span>
+              <span class="skill">Bash <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -212,9 +212,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Python <i class="val">90%</i></span>
+              <span class="skill">Python <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -225,14 +225,21 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">SQL <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
           </div>
 
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Scikit-learn <i class="val">75%</i></span>
+              <span class="skill">Scikit-learn <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -244,16 +251,23 @@
             </div>
             
             <div class="progress">
-              <span class="skill">Pandas/Numpy <i class="val">80%</i></span>
+              <span class="skill">Pandas/Numpy <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">SQL <i class="val">40%</i></span>
+              <span class="skill">Google Cloud Platform & BigQuery <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Apache Ariflow <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -290,6 +304,15 @@
             </div> -->
 
             <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Advanced Data Scientist</h4>
+              <h5>July 2022 - Present</h5>
+              <p><em>Capgemini Engineering (<a href="https://capgemini-engineering.com">capgemini-engineering.com</a>) </em></p>
+              <ul>
+                <li>Data Science & Engineering for Healthcare & Pharma industries.</li>
+                <li>ETL pipeline development and maintenance.</li>
+                <li>Business analyst.</li>
+              </ul>
             <div class="resume-item">
               <h4>Co-Founder & CEO</h4>
               <h5>February 2022 - Present</h5>
@@ -548,7 +571,7 @@
                 <p align="left">> Data mining and data cleaning of biodata</p>
                 <p align="left">> M.L. model building, testing & feature engineering</p>
                 <p align="left">> Statistical analysis and performance</p>
-                <p align="left">> Building data dashboards & reports</p>
+                <p align="left">> ETL pipelines and Databases</p>
               </p>
             </div>
           </div>
