--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             </div> -->
 
             <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
+            </div> <div class="resume-item">
               <h4>Advanced Data Scientist</h4>
               <h5>July 2022 - Present</h5>
               <p><em>Capgemini Engineering (<a href="https://capgemini-engineering.com">capgemini-engineering.com</a>) </em></p>
@@ -313,7 +313,7 @@
                 <li>ETL pipeline development and maintenance.</li>
                 <li>Business analyst.</li>
               </ul>
-            <div class="resume-item">
+            </div> <div class="resume-item">
               <h4>Co-Founder & CEO</h4>
               <h5>February 2022 - Present</h5>
               <p><em>Neomic (<a href="https://neomic.eu">neomic.eu</a>) </em></p>
